--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -7,7 +7,7 @@
     <h1>채팅방 : {{ room.name }}</h1>
     <div id="chat-log" style="border: 1px solid #ccc; padding: 10px; width: 50%; height: 300px; overflow-y: scroll; background-color: #f9f9f9;">
         {% for message in messages %}
-            <strong>익명:</strong> {{ message.content }} <br>
+            <strong>{{ message.user.username }}:</strong> {{ message.content }} <br>
         {% endfor %}
     </div>
     <input id="chat-message-input" type="text" size="50" placeholder="메시지를 입력하세요.">
@@ -23,9 +23,7 @@
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
             const chatLog = document.querySelector('#chat-log');
-            chatLog.innerHTML += ('<strong>익명:</strong> ' + data.message + '<br>');
-
-            // 스크롤을 항상 아래로 유지
+            chatLog.innerHTML += ('<strong>' + data.user + ':</strong> ' + data.message + '<br>');
             chatLog.scrollTop = chatLog.scrollHeight;
         };
 
