--- a/chat/templates/chat/chatroom_list.html
+++ b/chat/templates/chat/chatroom_list.html
@@ -14,7 +14,7 @@
     <ul>
         {% for participant in chat_rooms %}
             <li>
-                <a href="{% url 'chat:room' participant.room.name %}">{{ participant.room.name }}</a>
+                <a href="{% url 'chat:room' participant.room.name %}">{{ participant.room_name }}</a>
             </li>
         {% empty %}
             <li>대화 중인 채팅방이 없습니다.</li>
