✨ feat : 상품 등록 기능 작성
create html 작성
list 페이지 수정 - 상품등록버튼 생성
detail 페이지 수정 - 목록으로 버튼 생성

--- a/market/templates/market/product_detail.html
+++ b/market/templates/market/product_detail.html
@@ -42,7 +42,7 @@
         {% endfor %}
     </ul>
 
-    <button onclick="window.history.back();">뒤로</button>
+    <button onclick="window.location.href='{% url 'product-list' %}';">목록으로 돌아가기</button>
     
     <script>
         document.addEventListener('DOMContentLoaded', function() {
