--- a/market/templates/market/product_list.html
+++ b/market/templates/market/product_list.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Product List</h1>
+
+    {% if user.is_authenticated %}
+        <button onclick="window.location.href='{% url 'product-create' %}'">새 상품 등록</button>
+    {% endif %}
+
     <ul>
         {% for product in products %}
             <li>
