✨ feat : 이미지 표시 기능 추가
admin : 이미지 미리보기 수정
models : attribute image url -> image
 이미지파일 관리를 위해 uuid로 저장
 이미지 최대크기 지정 및 포맷 통합
serializer : Product에 이미지 필드 추가
이미지 url 호출 방식 수정
urls : 이미지 호출을 위한 mediaroot 설정
views : 이미지 전달방식 수정
 이미지 url 생성시 필요한 request를 serializer에 전달
템플릿 : 이미지 표시 추가

--- a/market/templates/market/product_detail.html
+++ b/market/templates/market/product_detail.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>{{ product.name }}</h1>
+
+    {% for image_url in product.images %}
+        <img src="{{ image_url }}" alt="{{ product.name }}" style="max-width: 100%; height: auto;">
+    {% endfor %}
     <p>작성자 : {{ product.username }}</p>
     <p>가격: {{ product.price }}원</p>
     <p>별점: {{ product.average_rating }}</p>
