🐛 fix : 이미지 업로드 버그
템플릿 : 속성값 model에 맞춰 수정
image_url -> image

--- a/market/templates/market/product_create.html
+++ b/market/templates/market/product_create.html
@@ -30,15 +30,15 @@
         <label for="harvest_date">재배 일자:</label>
         <input type="date" id="harvest_date" name="harvest_date" value="{{ serializer.data.harvest_date }}"><br><br>
 
-        <label for="image_urls">이미지 업로드 (최대 5장):</label>
-        <input type="file" id="image_urls" name="image_urls" accept="image/*" multiple required><br><br>
+        <label for="image">이미지 업로드 (최대 5장):</label>
+        <input type="file" id="image" name="image" accept="image/*" multiple required><br><br>
 
         <button type="submit">상품 생성</button>
         <button type="button" onclick="window.location.href='{% url 'product-list' %}';">취소</button>
     </form>
 
     <script>
-        document.getElementById('image_urls').addEventListener('change', function() {
+        document.getElementById('image').addEventListener('change', function() {
             if (this.files.length > 5) {
                 alert("최대 5개의 이미지만 업로드할 수 있습니다.");
                 this.value = ""; // 선택 초기화
