--- a/market/templates/market/product_update.html
+++ b/market/templates/market/product_update.html
@@ -30,8 +30,8 @@
         <label for="harvest_date">재배 일자:</label>
         <input type="date" id="harvest_date" name="harvest_date" value="{{ serializer.data.harvest_date }}"><br><br>
 
-        <label for="image_urls">이미지 업로드 (최대 5장):</label>
-        <input type="file" id="image_urls" name="image_urls" accept="image/*" multiple><br><br>
+        <label for="image">이미지 업로드 (최대 5장):</label>
+        <input type="file" id="image" name="image" accept="image/*" multiple><br><br>
 
         <button type="submit">상품 수정</button>
     </form>
